PowerShell-Docs-staging/reference/5.0/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
ms.date:  2017-06-09
schema:  2.0.0
locale:  en-us
keywords:  powershell,cmdlet
Help Version:  5.0.7.4
Download Help Link:  http://go.microsoft.com/fwlink/?linkid=390782
Module Guid:  00000000-0000-0000-0000-000000000000
title:  Microsoft.PowerShell.Core
Module Name:  Microsoft.PowerShell.Core
---

# Microsoft.PowerShell.Core Module
## Description
{{Manually Enter Description Here}}

## Microsoft.PowerShell.Core Cmdlets
### [Add-History](Add-History.md)
Appends entries to the session history.


### [Add-PSSnapin](Add-PSSnapin.md)
Adds one or more Windows PowerShell snap-ins to the current session.


### [Clear-History](Clear-History.md)
Deletes entries from the command history.


### [Connect-PSSession](Connect-PSSession.md)
Reconnects to disconnected sessions.


### [Debug-Job](Debug-Job.md)
Debugs a running background, remote, or Windows PowerShell Workflow job.


### [Disable-PSRemoting](Disable-PSRemoting.md)
Prevents remote users from running commands on the local computer.


### [Disable-PSSessionConfiguration](Disable-PSSessionConfiguration.md)
Disables session configurations on the local computer.


### [Disconnect-PSSession](Disconnect-PSSession.md)
Disconnects from a session.


### [Enable-PSRemoting](Enable-PSRemoting.md)
Configures the computer to receive remote commands.


### [Enable-PSSessionConfiguration](Enable-PSSessionConfiguration.md)
Enables the session configurations on the local computer.


### [Enter-PSHostProcess](Enter-PSHostProcess.md)
Connects to and enters into an interactive session with a local process.


### [Enter-PSSession](Enter-PSSession.md)
Starts an interactive session with a remote computer.


### [Exit-PSHostProcess](Exit-PSHostProcess.md)
Closes an interactive session with a local process.


### [Exit-PSSession](Exit-PSSession.md)
Ends an interactive session with a remote computer.


### [Export-Console](Export-Console.md)
Exports the names of snap-ins in the current session to a console file.


### [Export-ModuleMember](Export-ModuleMember.md)
Specifies the module members that are exported.


### [ForEach-Object](ForEach-Object.md)
Performs an operation against each item in a collection of input objects.


### [Get-Command](Get-Command.md)
Gets all commands.


### [Get-Help](Get-Help.md)
Displays information about Windows PowerShell commands and concepts.


### [Get-History](Get-History.md)
Gets a list of the commands entered during the current session.


### [Get-Job](Get-Job.md)
Gets Windows PowerShell background jobs that are running in the current session.


### [Get-Module](Get-Module.md)
Gets the modules that have been imported or that can be imported into the current session.


### [Get-PSHostProcessInfo](Get-PSHostProcessInfo.md)



### [Get-PSSession](Get-PSSession.md)
Gets the Windows PowerShell sessions on local and remote computers.


### [Get-PSSessionCapability](Get-PSSessionCapability.md)
Gets the capabilities of a specific user on a constrained session configuration.


### [Get-PSSessionConfiguration](Get-PSSessionConfiguration.md)
Gets the registered session configurations on the computer.


### [Get-PSSnapin](Get-PSSnapin.md)
Gets the Windows PowerShell snap-ins on the computer.


### [Import-Module](Import-Module.md)
Adds modules to the current session.


### [Invoke-Command](Invoke-Command.md)
Runs commands on local and remote computers.


### [Invoke-History](Invoke-History.md)
Runs commands from the session history.


### [New-Module](New-Module.md)
Creates a new dynamic module that exists only in memory.


### [New-ModuleManifest](New-ModuleManifest.md)
Creates a new module manifest.


### [New-PSRoleCapabilityFile](New-PSRoleCapabilityFile.md)
Creates a file that defines a set of capabilities to be exposed through a session configuration.


### [New-PSSession](New-PSSession.md)
Creates a persistent connection to a local or remote computer.


### [New-PSSessionConfigurationFile](New-PSSessionConfigurationFile.md)
Creates a file that defines a session configuration.


### [New-PSSessionOption](New-PSSessionOption.md)
Creates an object that contains advanced options for a PSSession.


### [New-PSTransportOption](New-PSTransportOption.md)
Creates an object that contains advanced options for a session configuration.


### [Out-Default](Out-Default.md)
Sends the output to the default formatter and to the default output cmdlet.


### [Out-Host](Out-Host.md)
Sends output to the command line.


### [Out-Null](Out-Null.md)
Deletes output instead of sending it down the pipeline.


### [Receive-Job](Receive-Job.md)
Gets the results of the Windows PowerShell background jobs in the current session.


### [Receive-PSSession](Receive-PSSession.md)
Gets results of commands in disconnected sessions.


### [Register-ArgumentCompleter](Register-ArgumentCompleter.md)
Registers a custom argument completer.


### [Register-PSSessionConfiguration](Register-PSSessionConfiguration.md)
Creates and registers a new session configuration.


### [Remove-Job](Remove-Job.md)
Deletes a Windows PowerShell background job.


### [Remove-Module](Remove-Module.md)
Removes modules from the current session.


### [Remove-PSSession](Remove-PSSession.md)
Closes one or more Windows PowerShell sessions (PSSessions).


### [Remove-PSSnapin](Remove-PSSnapin.md)
Removes Windows PowerShell snap-ins from the current session.


### [Resume-Job](Resume-Job.md)
Restarts a suspended job.


### [Save-Help](Save-Help.md)
Downloads and saves the newest help files to a file system directory.


### [Set-PSDebug](Set-PSDebug.md)
Turns script debugging features on and off, sets the trace level, and toggles strict mode.


### [Set-PSSessionConfiguration](Set-PSSessionConfiguration.md)
Changes the properties of a registered session configuration.


### [Set-StrictMode](Set-StrictMode.md)
Establishes and enforces coding rules in expressions, scripts, and script blocks.


### [Start-Job](Start-Job.md)
Starts a Windows PowerShell background job.


### [Stop-Job](Stop-Job.md)
Stops a Windows PowerShell background job.


### [Suspend-Job](Suspend-Job.md)
Temporarily stops workflow jobs.


### [Test-ModuleManifest](Test-ModuleManifest.md)
Verifies that a module manifest file accurately describes the contents of a module.


### [Test-PSSessionConfigurationFile](Test-PSSessionConfigurationFile.md)
Verifies the keys and values in a session configuration file.


### [Unregister-PSSessionConfiguration](Unregister-PSSessionConfiguration.md)
Deletes registered session configurations from the computer.


### [Update-Help](Update-Help.md)
Downloads and installs the newest help files on your computer.


### [Wait-Job](Wait-Job.md)
Suppresses the command prompt until one or all of the Windows PowerShell background jobs running in the session are completed.


### [Where-Object](Where-Object.md)
Selects objects from a collection based on their property values.

